[package]
name = "readonly-root-filesystem-psp-policy"
version = "0.1.6"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
kubewarden-policy-sdk = { version = "0.9.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
