[package]
name = "readonly-root-filesystem-psp-policy"
version = "1.0.0"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
kubewarden-policy-sdk = { version = "0.13.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
